welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:23: error: not found: value prendsBiscuit
	prendsBiscuit();
        ^